--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.9.0
 dj-database-url==3.0.1
 Django==5.2.4
+gunicorn==23.0.0
 mysqlclient==2.2.7
+packaging==25.0
 pillow==11.3.0
 sqlparse==0.5.3
 tzdata==2025.2
